
To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

140178  open("/proc/self/exe", ...); doesn't quite work
140939 --track-fds reports leakage of stdout/in/err and doesn't respect -q
217695  malloc/calloc/realloc/memalign failure doesn't set errno to ENOMEM
345077  linux syscall execveat support (linux 3.19)
361770  Missing F_ADD_SEALS
369029  handle linux syscalls sched_getattr and sched_setattr
384729  __libc_freeres inhibits cross-platform valgrind
388787  Support for C++17 new/delete
391853  Makefile.all.am:L247 and @SOLARIS_UNDEF_LARGESOURCE@ being empty
397605  ioctl FICLONE mishandled
408663  Suppression file for musl libc
404076  s390x: z14 vector instructions not implemented
410743  shmat() calls for 32-bit programs fail when running in 64-bit valgrind
        (actually affected all x86 and nanomips regardless of host bitness)
413547  regression test does not check for Arm 64 features.
414268  Enable AArch64 feature detection and decoding for v8.x instructions
415293  Incorrect call-graph tracking due to new _dl_runtime_resolve_xsave*
422174  unhandled instruction bytes: 0x48 0xE9 (REX prefixed JMP instruction)
422261  platform selection fails for unqualified client name
422623  epoll_ctl warns for uninitialized padding on non-amd64 64bit arches
423021  PPC:  Add missing ISA 3.0 documentation link and HWCAPS test.
423195  PPC ISA 3.1 support is missing, part 1
423361  Adds io_uring support on arm64/aarch64 (and all other arches)
424012  crash with readv/writev having invalid but not NULL arg2 iovec
424298  amd64: Implement RDSEED
425232  PPC ISA 3.1 support is missing, part 2
425820  Failure to recognize vpcmpeqq as a dependency breaking idiom.
426014  arm64: implement fmadd and fmsub as Iop_MAdd/Sub
426123  PPC ISA 3.1 support is missing, part 3
426144  Fix "condition variable has not been initialized" on Fedora 33.
427400  PPC ISA 3.1 support is missing, part 4