@@ -107,6 +107,7 @@ where XXXXXX is the bug number as listed below.
 140178  open("/proc/self/exe", ...); doesn't quite work
 140939 --track-fds reports leakage of stdout/in/err and doesn't respect -q
 217695  malloc/calloc/realloc/memalign failure doesn't set errno to ENOMEM
+338633  gdbserver_tests/nlcontrolc.vgtest hangs on arm64
 345077  linux syscall execveat support (linux 3.19)
 361770  Missing F_ADD_SEALS
 369029  handle linux syscalls sched_getattr and sched_setattr
@@ -159,6 +160,7 @@ where XXXXXX is the bug number as listed below.
 432672  vg_regtest: test-specific environment variables not reset between tests
 432809  VEX should support REX.W + POPF
 432861  PPC modsw and modsd give incorrect results for 1 mod 12
+432870  gdbserver_tests:nlcontrolc hangs with newest glibc2.33 x86-64
 432215  Add debuginfod functionality
 433323  Use pkglibexecdir as vglibdir
 433500  DRD regtest faulures when libstdc++ and libgcc debuginfo are installed
